manifests/homelab/calibre/calibre-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: homelab
  labels:
    app: calibre-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      automountServiceAccountToken: false
      containers:
      - name: calibre-web
        image: linuxserver/calibre-web
        ports:
        - name: gui
          containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-web
      - name: books
        persistentVolumeClaim:
          claimName: calibre-books
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: homelab
spec:
  selector:
    app: calibre-web
  ports:
  - name: web
    protocol: TCP
    port: 8083
    targetPort: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
  namespace: homelab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.iio/proxy-body-size: 150m
#    nginx.ingress.kubernetes.io/rewrite-target: /calibre-web/$0
    cert-manager.io/cluster-issuer: "letsencrypt-array21"

spec:
  tls:
  - hosts:
    - calibre-web.k8s.array21.dev
    secretName: calibre-web-k8s-array21-dev
  rules:
  - host: calibre-web.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre-web
            port:
              number: 8083
