manifests/homelab/calibre/calibre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  labels:
    app: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre
        image: linuxserver/calibre
        ports:
        - name: gui
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre
      - name: books
        persistentVolumeClaim:
          claimName: calibre-books
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  selector:
    app: calibre
  ports:
  - name: web
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.iio/proxy-body-size: 150m
#    nginx.ingress.kubernetes.io/rewrite-target: /calibre/$1
spec:
  tls:
  - hosts:
    - calibre.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: calibre.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre
            port:
              number: 8080
